Created local Docker build and connected bot to discord with updated environmental variables.

--- a/sample.env
+++ b/sample.env
@@ -9,7 +9,7 @@ AUTOMUTEUS_TAG=
 GALACTUS_TAG=
 
 # change these, but see comment below about HOST/PORT
-DISCORD_BOT_TOKEN=
+DISCORD_BOT_TOKEN=ODA4NDUwNzUwMTk1MDQwMzE4.YCGubw.AMjp_BE0FWgyGiXkifYbg55F0Ok
 GALACTUS_HOST=
 GALACTUS_EXTERNAL_PORT=
 
